Lagt til behandling type i api'et
